shorewall6 (4.4.8-1) unstable; urgency=low

  * New Upstream Version

 -- Roberto C. Sanchez <roberto@connexer.com>  Sat, 27 Mar 2010 20:31:24 -0400

shorewall6 (4.4.7.4-2) unstable; urgency=low

  * Synchronize init script with upstream

 -- Roberto C. Sanchez <roberto@connexer.com>  Sun, 21 Feb 2010 21:18:50 -0500

shorewall6 (4.4.7.4-1) unstable; urgency=low

  * New Upstream Version
  * Update to Standards-Version 3.8.4 (no changes)
  * Add missing dependency on $remote_fs in init script.

 -- Roberto C. Sanchez <roberto@connexer.com>  Mon, 15 Feb 2010 10:45:52 -0500

shorewall6 (4.4.6-1) unstable; urgency=low

  * New Upstream Version

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 19 Jan 2010 19:13:58 -0500

shorewall6 (4.4.5.4-1) unstable; urgency=low

  * New Upstream Version

 -- Roberto C. Sanchez <roberto@connexer.com>  Thu, 24 Dec 2009 15:09:52 -0500

shorewall6 (4.4.5-1) unstable; urgency=low

  * New Upstream Version

 -- Roberto C. Sanchez <roberto@connexer.com>  Sat, 19 Dec 2009 14:12:50 -0500

shorewall6 (4.4.4.2-2) unstable; urgency=low

  * Fix computation of dependencies

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 08 Dec 2009 21:56:23 -0500

shorewall6 (4.4.4.2-1) unstable; urgency=low

  * New Upstream Version

 -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 08 Dec 2009 21:03:50 -0500

shorewall6 (4.4.4-2) unstable; urgency=low

  * Add Japanese debconf translation, thanks to Hideki Yamane (Closes: #558053)

 -- Roberto C. Sanchez <roberto@connexer.com>  Thu, 26 Nov 2009 08:24:06 -0500

shorewall6 (4.4.4-1) unstable; urgency=low

  * New Upstream Version

 -- Roberto C. Sanchez <roberto@connexer.com>  Sat, 21 Nov 2009 14:21:27 -0500

shorewall6 (4.4.3-1) unstable; urgency=low

  * New Upstream Version

 -- Roberto C. Sanchez <roberto@connexer.com>  Sun, 01 Nov 2009 14:49:12 -0500

shorewall6 (4.4.2-1) unstable; urgency=low

  * New Upstream Version (Closes: #538134)
  * Override lintian warning about init script
