@@ -1,5 +1,0 @@
-This package uses quilt to manage all modifications to the upstream
-source.  Changes are stored in the source package as diffs in
-debian/patches and applied during the build.
-
-See /usr/share/doc/quilt/README.source for a detailed explanation.
